--- a/miniprogram/cusService/newOrderDetails/newOrderDetails.wxml
+++ b/miniprogram/cusService/newOrderDetails/newOrderDetails.wxml
@@ -10,8 +10,8 @@
 </view>
 <view>
   <van-cell-group>
-    <van-field value="{{ facilityid }}" label="设备id" disabled/>
-    <van-field value="{{ facilityType }}" label="设备类型“" disabled/>
+    <van-field value="{{ facilityid }}" label="设备id" icon="underway-o" bind:click-icon="repaireHistory" disabled/>
+    <van-field value="{{ facilityType }}" label="设备类型" disabled/>
     <van-field value="{{ facilityName }}" label="设备名称" disabled/>
     <van-field value="{{ brandName }}" label="设备品牌" disabled/>
     <van-field value="{{ address }}" label="详细地址" disabled/>
