--- a/miniprogram/manager/orderDetail/orderDetail.wxml
+++ b/miniprogram/manager/orderDetail/orderDetail.wxml
@@ -13,7 +13,7 @@
 </view>
 <view>
  <van-cell-group>
-    <van-field value="{{ facilityid }}" label="设备id" icon="search" bind:click-icon="repaireHistory" disabled/>
+    <van-field value="{{ facilityid }}" label="设备id" icon="underway-o" bind:click-icon="repaireHistory" disabled/>
     <van-field value="{{ facilityType }}" label="设备类型" disabled/>
     <van-field value="{{ facilityName }}" label="设备名称" disabled/>
     <van-field value="{{ brandName }}" label="设备品牌" disabled/>
