--- a/miniprogram/manager/recallDetail/recallDetail.wxml
+++ b/miniprogram/manager/recallDetail/recallDetail.wxml
@@ -10,7 +10,7 @@
 </view>
 <view>
  <van-cell-group>
-    <van-field value="{{ facilityid }}" label="设备id" disabled/>
+    <van-field value="{{ facilityid }}" label="设备id" icon="underway-o" bind:click-icon="repaireHistory" disabled/>
     <van-field value="{{ facilityType }}" label="设备类型" disabled/>
     <van-field value="{{ facilityName }}" label="设备名称" disabled/>
     <van-field value="{{ brandName }}" label="设备品牌" disabled/>
@@ -32,7 +32,7 @@
   </van-cell-group>
 </view>
 <view> 
-    <view class="problem-desc">上次维修备注</view>
+    <view class="problem-desc">上次维修备注( 技术员：{{assignName}} )</view>
     <textarea class="textarea-bg"  maxlength="200" value="{{ problemDetail }}" disabled="true"/> 
 </view>
 <view class="problem"><text>现在手上无报修单的销售有:</text></view>
