--- a/miniprogram/pages/authorized/authorized.wxml
+++ b/miniprogram/pages/authorized/authorized.wxml
@@ -9,10 +9,12 @@
             <view>申请获取以下权限</view>
             <text>获得你的公开信息(昵称，头像等)</text>
         </view>
-        <button class='bottom' type='primary' open-type="getUserInfo" lang="zh_CN" bindgetuserinfo="bindGetUserInfo">
-            授权登录
+        <button class="bottom" type='primary' bindtap="nopwsubmit">客户登录</button>
+        
+        <button class='bottom' type='default' open-type="getUserInfo" lang="zh_CN" bindgetuserinfo="bindGetUserInfo">
+            售后登录
         </button>
-        <button class="bottom" type='primary' bindtap="nopwsubmit">报修登录</button>
+        
 
     </view>
     <view wx:else>请升级微信版本</view>
