--- a/miniprogram/pages/index/index.wxml
+++ b/miniprogram/pages/index/index.wxml
@@ -49,6 +49,9 @@
     <van-col span="5">
        <i class="fa fa-address-card-o fa-2x" style="color:#E6109B;" bindtap="infoAdmin_set"></i>
     </van-col>
+     <van-col span="5">
+      <i class="fa fa-address-card fa-2x" style="color:#3F51B5;" bindtap="my_info"></i>
+    </van-col>
   </van-row>
 </view>
 
@@ -62,6 +65,9 @@
     </van-col>
     <van-col span="5">
       <text>信息中心\n管理员</text>
+    </van-col>
+    <van-col span="5">
+      <text>个人中心</text>
     </van-col>
   </van-row>
 </view>
